src/BadLang/Tests/BadC.Tests/tests/passing/operators/Assignment64.basm
.dependency TestFramework

.data data data_raw BASM_DATA
{
	.i64 VALUE assembly 0
	.cstr FailMsg assembly "64-bit Assignment Failed"
}

.code code code_raw BadC
{
	void __main__() : export
	{
		data::VALUE = 10;

		TestFramework::Assert::Equals64(data::VALUE, 10, &data::FailMsg);

		halt;
	}
}