src/BadLang/Tests/BadC.Tests/tests/failing/SymbolNotFoundException/InvalidUnknownVariable.basm

.code code code_raw BadC
{
	void __main__() : export
	{
		i64 valueA = a;
		halt;
	}
}